--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Mandatory settings
 
 blog_theme: light # Or use dark
-name: Chalk
-paginate: 25
-url: # add your site url (format: https://example.com)
+name: Grouchy developer
+paginate: 10
+url: https://mskonovalov.github.io
 
 
 # Optional settings
