--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,13 @@ rvm:
 install:
 - ./bin/setup
 script:
-- bundle exec jekyll build --trace
-- bundle exec htmlproofer ./_site --only-4xx --allow-hash-href --disable-external
+- jekyll build --trace
+- htmlproofer _site --disable-external
+
+branches:
+  only:
+  - develop  
+
 after_success:
 - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "develop" && "./bin/travis"
 env:
@@ -13,3 +18,5 @@ env:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
   - USERNAME: mskonovalov
   - EMAIL: mskonovalov@gmail.com
+
+sudo: false # route your build to the container-based infrastructure for a faster build
