--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: https://mskonovalov.github.io
 
 about_enabled: false # Change to true if you wish to show an icon in the navigation that redirects to the about page
 baseurl: # Set if blog doesn't sit at the root of the domain (format: /blog)
-discus_identifier: mskonovalov # Add your Disqus identifier
+discus_identifier: mskonovalov-github-io # Add your Disqus identifier
 ga_analytics: # Add your GA Tracking Id
 local_fonts: false # Change to true if you wish to use local fonts
 rss_enabled: true # Change to false if not
